package com.projectsney.dscommerce.entities;

public enum OrderStatus {
    WAITING_PAYMENT, PAID, SHIPPED, DELIVERED, CANCELED;
}
